microservice-k8s-demo/k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: order:latest
        ports:
        - containerPort: 8083
        resources: {
          limits: {
            memory: "128Mi",
            cpu: "500m"
          },
          requests: {
            memory: "64Mi",
            cpu: "250m"
          }
        }
