microservice-k8s-demo/k8s/catalog-service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: catalog-service
spec:
  selector:
    app: catalog
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
