microservice-k8s-demo/k8s/customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
