microservice-k8s-demo/k8s/order-service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
