microservice-k8s-demo/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commerce-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "commerce.local"  # ローカルホスト名
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: commerce-gateway-service
                port:
                  number: 80
